Implemented Author CRUD Operations
